2001-10-24  Jeffrey Stedfast  <fejj@ximian.com>

	* pan-mime-parser.c (construct_message_headers): Use
	g_mime_header_add instead of g_mime_header_set so we can get
	multiple of the same header (such as "Received:").

	* gmime-parser.c (construct_headers): Use g_mime_header_add
	instead of g_mime_header_set so we can get multiple of the same
	header (such as "Received:") and also move it into the switch
	statement into the default case.

	* gmime-message.c (g_mime_message_set_header): New function to add
	a header to a message.

	* gmime-header.c (g_mime_header_add): New function to add a
	header.

	* gmime-stream.c (g_mime_stream_writev): New function to write a
	vector to a stream.

2001-10-21  Jeffrey Stedfast  <fejj@ximian.com>

	* pan-mime-parser.c: Updated to use g_mime_stream_buffer_readln.

	* gmime-stream-buffer.c (g_mime_stream_buffer_readln): New
	convenience function to read a single line from a stream.

2001-10-12  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-part.c (g_mime_part_write_to_stream): No longer takes a
	'toplevel' argument.
	(g_mime_part_to_string): No longer takes a 'toplevel' argument.

	* gmime-message.c (g_mime_message_write_to_stream): Write the
	MIME-Version header here instead of needing to pass a 'toplevel'
	argument to g_mime_part_write_to_stream().

	* gmime-charset.c (g_mime_charset_init): Fix for Debian and
	Solaris.

2001-10-09  Charles Kerr <charles@rebelbase.com>

	* gmime-filter.c (g_mime_filter_construct): make sure outptr is
	zeroed out before we read it in g_mime_filter_set_size().

2001-10-06  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-filter-basic.c (filter_filter): Implemented uuencoding.
	(filter_complete): Implemented uuencoding.

	* gmime-utils.c (g_mime_utils_uuencode_close): New function to
	flush the uuencoder.
	(g_mime_utils_uuencode_step): New function to uuencode a block of
	data.

2001-10-05  Jeffrey Stedfast  <fejj@ximian.com>

	Fixes for c++ compilation

	* gmime-stream*.c: s/template/stream_template
